name:                fsm-conversation
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/fsm-conversation#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , parallel-io
                      , http-conduit
                      , HandsomeSoup
                      , optparse-applicative
                      , containers
                      , split
                      , xml
                      , random
                      , mtl
                      , transformers
                      , bytestring
                      , cassava
                      , vector
                      , text
                      , aeson
                      , aeson-pretty
                      , directory
                      , utf8-string
                      , string-conversions
                      , hedis
                      , wreq
                      , lens
                      , unordered-containers
                      , parsec
  default-language:    Haskell2010

executable fsm-conversation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , fsm-conversation
                     , directory
                     , transformers
                     , hedis
                     , wreq
                     , lens
  default-language:    Haskell2010

test-suite fsm-conversation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fsm-conversation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fsm-conversation
