name:                ma-csv-xml
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ma-csv-xml#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                      , containers
                      , split
                      , xml
                      , random
                      , mtl
                      , transformers
                      , bytestring
                      , cassava
                      , vector
                      , text
                      , aeson
                      , aeson-pretty
                      , directory
                      , utf8-string
                      , string-conversions
                      , hxt
  default-language:    Haskell2010

executable ma-csv-xml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ma-csv-xml
  default-language:    Haskell2010

test-suite ma-csv-xml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ma-csv-xml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ma-csv-xml
